change npm scope

--- a/workspace-1/package.json
+++ b/workspace-1/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "@fmal/workspace-1",
+  "name": "@powel/workspace-1",
   "description": "Workspace 1",
   "version": "0.0.0",
-  "publishConfig": {
-    "access": "restricted"
-  },
   "module": "dist/index.js",
   "scripts": {
     "build": "tsc -p .",
