--- a/workspace-2/package.json
+++ b/workspace-2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fmal/workspace-2",
+  "name": "@powel/workspace-2",
   "description": "Workspace 2",
   "version": "0.0.0",
   "publishConfig": {
