chore: print git status

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,3 +30,6 @@ jobs:
           PRERELEASE: true
         run: |
           yarn run release
+      - name: Print status
+        run: |
+          git status
