chore: add repo details

--- a/workspace-1/package.json
+++ b/workspace-1/package.json
@@ -2,6 +2,11 @@
   "name": "@powel/workspace-1",
   "description": "Workspace 1",
   "version": "0.0.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fmal/typescript-patch-issue-repro",
+    "directory": "workspace-1"
+  },
   "module": "dist/index.js",
   "scripts": {
     "build": "tsc -p .",
