--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "typescript-patch-issue-repro",
   "version": "0.0.0-ignore",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fmal/typescript-patch-issue-repro"
+  },
   "workspaces": [
     "workspace-1",
     "workspace-2"
