--- a/workspace-2/package.json
+++ b/workspace-2/package.json
@@ -2,6 +2,11 @@
   "name": "@powel/workspace-2",
   "description": "Workspace 2",
   "version": "0.0.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fmal/typescript-patch-issue-repro",
+    "directory": "workspace-2"
+  },
   "publishConfig": {
     "access": "restricted"
   },
